--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html>
 <body>
 <h1>Hello World</h1>
+<h2>Fixes<h2>
+<h3>Startup Brightness<h3>
+<p>Edit the file, run "sudo -H gedit /etc/rc.local" 
+https://askubuntu.com/questions/151651/brightness-is-reset-to-maximum-on-every-restart
+</p>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
