--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@ p.test {
 }
 </style>
 
+<head>
+<link rel="icon" href="http://pics.who.pho.to/img/thumbs/chatroulettenet.com_favicon.jpg">
+</head>
+
 <body style="font-family:courier new;">
 <h1>Hello World</h1>
 <h2>Fixes</h2>
