--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ p.test {
 
 <head>
 <link rel="icon" href="http://pics.who.pho.to/img/thumbs/chatroulettenet.com_favicon.jpg">
+<title>tw</title>
 </head>
 
 <body style="font-family:courier new;">
