--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@ create a new line after <b>import os</b> and add:<br>
 Save and reboot <br>
 <a href="http://askubuntu.com/a/744500">src</a>
 
-<p>I'm hosted with GitHub Pages.</p>
 </body>
+
+<footer>
+<p>I'm hosted with GitHub Pages.</p>
+</footer>
+
 </html>
