--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@ p.test {
 </style>
 
 <head>
-<link rel="icon" href="http://pics.who.pho.to/img/thumbs/chatroulettenet.com_favicon.jpg">
+<link rel="icon" href="https://avatars2.githubusercontent.com/u/5669405?v=3&s=140>
+http://pics.who.pho.to/img/thumbs/chatroulettenet.com_favicon.jpg">
 <title>tw</title>
 </head>
 
