created assets folder

--- a/fixes.html
+++ b/fixes.html
@@ -12,9 +12,9 @@
     <title>Terrence Wong</title>
 
     <!-- Custom CSS -->
-    <link rel="custom stylesheet" type="text/css" href="css/custom.css">
+    <link rel="custom stylesheet" type="text/css" href="assets/css/custom.css">
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <style>
@@ -43,10 +43,10 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
+                      <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">terrence</a>
+                <a class="navbar-brand" href="/">t</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -92,8 +92,8 @@
     <footer>
       <p>
         <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">
-          <img src="css/img/cc-cc.png" class="cc">
-          <img src="css/img/cc-by.png" class="cc">
+          <img src="assets/img/cc-cc.png" class="cc">
+          <img src="assets/img/cc-by.png" class="cc">
         </a>
         This work is licensed under a
         <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">Creative Commons License</a>
