--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <title>Terrence Wong</title>
 
     <!-- Custom CSS -->
-    <link rel="custom stylesheet" type="text/css" href="css/custom.css">
+    <link rel="custom stylesheet" type="text/css" href="assets/css/custom.css">
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
     <style>
@@ -46,7 +46,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">terrence</a>
+                <a class="navbar-brand" href="/">t</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -79,10 +79,10 @@
                     <li>jQuery v1.11.1</li>
                 </ul>
                 <a rel="github" href="http://github.com/terrencewong">
-                  <img src="css/img/github-logo.png" class="contact">
+                  <img src="assets/img/github-logo.png" class="contact">
                 </a>
                 <a rel="linkedin" href="https://www.linkedin.com/in/terrencevv">
-                  <img src="css/img/linkedin-logo.svg" class="contact">
+                  <img src="assets/img/linkedin-logo.svg" class="contact">
                 </a>
             </div>
         </div>
@@ -92,8 +92,8 @@
     <footer>
       <p>
         <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">
-          <img src="css/img/cc-cc.png" class="cc">
-          <img src="css/img/cc-by.png" class="cc">
+          <img src="assets/img/cc-cc.png" class="cc">
+          <img src="assets/img/cc-by.png" class="cc">
         </a>
         This work is licensed under a
         <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">Creative Commons License</a>
