change images to icons for speed

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">t</a>
+                <a class="navbar-brand" href="/"><i class="fa fa-bolt" aria-hidden="true"></i> terrence</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -71,25 +71,15 @@
                     <li>Bootstrap v3.3.7</li>
                     <li>jQuery v1.11.1</li>
                 </ul>
-                <a rel="github" href="http://github.com/terrencewong">
-                  <img src="assets/img/github-logo.png" class="contact">
-                </a>
-
-                <a rel="linkedin" href="https://www.linkedin.com/in/terrencevv">
-                  <img src="assets/img/linkedin-logo.svg" class="contact">
-                </a>
-                <a rel="email" href="<span></span>">
-                  <img src="assets/img/mail.png" id="contact-email">
-                </a>
                 <div class="contact-links">
-                  <a href="http://github.com/terrencewong">
-                    GitHub
-                  </a>
+                  <a href="https://github.com/terrencewong">
+                    <i class="fa fa-github-alt fa-2x" aria-hidden="true"></i>
+                  </a>&nbsp;
                   <a href="https://www.linkedin.com/in/terrencevv">
-                    LinkedIn
-                  </a>
+                    <i class="fa fa-linkedin fa-2x" aria-hidden="true"></i>
+                  </a>&nbsp;
                   <a href="https://www.linkedin.com/in/terrencevv">
-                    Mail
+                    <i class="fa fa-envelope-o fa-2x" aria-hidden="true"></i>
                   </a>
               </div>
             </div>
@@ -100,7 +90,7 @@
     <footer>
       <p>
         <a rel="license" href="http://creativecommons.org/licenses/by/3.0/deed.en_US">
-          <img src="assets/img/cc-cc.png" class="cc">
+          <i class="fa fa-creative-commons" aria-hidden="true"></i>
           <img src="assets/img/cc-by.png" class="cc">
         </a>
         This work is licensed under a
@@ -121,7 +111,7 @@
     <link rel="custom stylesheet" type="text/css" href="assets/css/custom.css">
     <!-- Bootstrap Core CSS -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-
+<link rel="stylesheet" href="assets/css/font-awesome.min.css">
     <!-- Custom CSS -->
 
 
