--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@ layout: default
     {% else %}
     <a href="{{ nav.url | prepend: site.baseurl }}">{{ nav.name }}</a>
     {% endif %}
-    {% endfor %}
+    {% endfor %}  |    
+    {% if site.author.github %}
+    <a href="https://github.com/{{ site.author.github }}"><i class="fa fa-github" aria-hidden="true"></i></a>
+    {% endif %}
   </nav>
 </header>
+
