modfiying navbar layout

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@ layout: default
     {% else %}
     <a href="{{ nav.url | prepend: site.baseurl }}">{{ nav.name }}</a>
     {% endif %}
-    {% endfor %}  |    
-    {% if site.author.github %}
-    <a href="https://github.com/{{ site.author.github }}"><i class="fa fa-github" aria-hidden="true"></i></a>
-    {% endif %}
+    {% endfor %}&nbsp;&nbsp;|&nbsp;&nbsp;  
+    <a href="https://github.com/terrencewong"><i class="fa fa-github" aria-hidden="true"></i></a>&nbsp;&nbsp;
+    <a href="https://www.linkedin.com/in/tw604/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
   </nav>
 </header>
+
 
