--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,9 @@
 ---
-layout: default
+layout: page
+title: Resume
+permalink: /resume.html
 ---
+
 <header class="header">
   <div class="header-title">
     <a href="{{ site.url }}{{ site.baseurl }}">{{ site.name }}</a>
@@ -18,14 +21,8 @@ layout: default
   </nav>
 </header>
 <div class="page">
-  {{ content }}
-  <!--<form action="https://formspree.io/twa63@sfu.ca" method="POST">
-	    <i class="fa fa-user" aria-hidden="true"> </i><input type="text" placeholder="Name" name="name"><br>
-	    <i class="fa fa-envelope" aria-hidden="true"> </i><input type="email" placeholder="Email" name="email"><br>
-	    <i class="fa fa-comment" aria-hidden="true"> </i><textarea name="comment" placeholder="Message" style="height:100px;"></textarea><br>
-	    <input type="submit" value="Send">
-  </form>-->
-
-
-
+<iframe src="/resume/test.pdf" width="100%" height="800px"></iframe>
 </div>
+
+
+
