--- a/resume.html
+++ b/resume.html
@@ -1,27 +1,11 @@
 ---
 layout: page
 title: Resume
-permalink: /resume.html
+permalink: /resume
 ---
 
-<header class="header">
-  <div class="header-title">
-    <a href="{{ site.url }}{{ site.baseurl }}">{{ site.name }}</a>
-  </div>
-  <nav class="header-nav">
-    {% for nav in site.nav %}
-    {% if nav.url contains 'http://' or nav.url contains 'https://' %}
-    <a href="{{ nav.url }}">{{ nav.name }}</a>
-    {% else %}
-    <a href="{{ nav.url | prepend: site.baseurl }}">{{ nav.name }}</a>
-    {% endif %}
-    {% endfor %}&nbsp;&nbsp;|&nbsp;&nbsp;  
-    <a href="https://github.com/terrencewong"><i class="fa fa-github" aria-hidden="true"></i></a>&nbsp;&nbsp;
-    <a href="https://www.linkedin.com/in/tw604/"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-  </nav>
-</header>
 <div class="page">
-<iframe src="/resume/test.pdf" width="100%" height="800px"></iframe>
+<iframe src="/resume/test.pdf" width="100%" height="100%"></iframe>
 </div>
 
 
