--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,7 @@ permalink: /resume
 ---
 
 <div class="page">
-<iframe src="/resume/test.pdf" width="100%" height="100%"></iframe>
+<iframe src="/resume/test.pdf" width="100%" height="800px"></iframe>
 </div>
 
 
