--- a/resume.html
+++ b/resume.html
@@ -5,6 +5,7 @@ permalink: /resume
 ---
 
 <div class="page">
+<a href="https://terrencewong.github.io/resume/resume.pdf" target="_blank">download</a>
 <iframe src="/resume/resume.pdf" width="100%" height="800px"></iframe>
 </div>
 
