--- a/projects/index.html
+++ b/projects/index.html
@@ -1,20 +1,21 @@
 ---
 layout: page
-title: Blog Page
+title: projects
 ---
-<ul>
-  {% for post in site.posts %}
-    <li><a href="{{ post.url }}">{{ post.title }}</a>
-      {{ post.excerpt }}
-    </li>
-  {% endfor %}
-</ul>
 
 {% for category in site.categories %}
-  <h3>{{ category[0] }}</h3>
   <ul>
     {% for post in category[1] %}
-      <li><a href="{{ post.url }}">{{ post.title }}</a></li>
+      <li><a href="{{ post.url }}">{{ post.title }}</a>
+	{{ post.excerpt }}
+	</li>
+    {% endfor %}
+  </ul>
+  <ul>
+    {% for post in projects %}
+      <li><a href="{{ post.url }}">{{ post.title }}</a>
+	{{ post.excerpt }}
+	</li>
     {% endfor %}
   </ul>
 {% endfor %}
