--- a/projects/index.html
+++ b/projects/index.html
@@ -12,7 +12,7 @@ title: projects
     {% endfor %}
   </ul>
   <ul>
-    {% for post in projects %}
+    {% for post in category[2] %}
       <li><a href="{{ post.url }}">{{ post.title }}</a>
 	{{ post.excerpt }}
 	</li>
