try with post excerpt

--- a/projects/index.html
+++ b/projects/index.html
@@ -34,6 +34,7 @@ title: projects
           {{ post.title }}
         </span>
       </a>
+	{{ post.excerpt }}
     </div>
       {% endfor %}
     {% endfor %}
